<resources>
    <string name="app_name">HealtsOrSomethingElse</string>
    <string name="main_icon_of_app">main icon of app</string>

    <string name="home_string">Домашняя</string>
    <string name="profile_string">Профиль</string>
    <string name="database_string">База знаний</string>
    <string name="helpful_advice_string_res">Полезные советы</string>
    <string name="feeling_string_res">Как вы себя сегодня чувствуете?</string>
    <string name="calories_string_res">Калории</string>
    <string name="distance_string_res">Дистанция</string>
    <string name="day_statistics_string_res">Статистика за день</string>
    <string name="workout_string_res">Тренировки</string>
    <string name="sleep_time_string_res">Время сна</string>
    <string name="average_sleep_time_string_res">Среднее время сна</string>
    <string name="recommended_sleep_time_string_res">
        Рекомендуемое \n
        время для сна
    </string>
    <string name="in_average_string_res">В среднем</string>
    <string name="all_string_res">Всего</string>
    <string name="on_string_res">На </string>
    <string name="last_week_string_res">чем на прошлой неделе</string>
    <string name="week_statistics_string_res">Статистика за неделю</string>
    <string name="steps_string_res">Шаги</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_notification">Уведомления</string>

    <string name="unknown">Произошла неизвестная ошибка</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="no_notification">Упс, похоже здесь пусто</string>
    <string name="exercises">Упражнения</string>
    <string name="changeable_info_string_res">Настраиваемая информация</string>
    <string name="motive_string_res">Какая ваша цель?</string>
    <string name="current_parameters">Текущие показатели</string>
    <string name="purposes">Цели</string>
    <string name="add_new_purpose_string_res">Добавить новую цель</string>
    <string name="all_recipes_string_res">Все рецепты</string>
    <string name="categories_string_res">Категории</string>
    <string name="favorite_string_res">Избранное</string>
    <string name="vegetarian_string_res">Вегетерианское</string>

    <!--Notifications-->
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="last_week">На прошлой неделе</string>
    <string name="last_month">В прошлой месяце</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="category">Категории</string>
    <string name="recipes">Рецепты</string>
    <string name="workout">Упражнения</string>
    <string name="advices">Советы</string>
    <string name="google_account_not_found">Вы не вошли в аккаунт Google</string>
</resources>