<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.FoodFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:outlineProvider="none"
        android:elevation="0dp"
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <com.google.android.material.tabs.TabLayout
                android:outlineProvider="none"
                app:tabIndicatorAnimationMode="elastic"
                app:tabIndicatorColor="@color/colorLightGreen"
                app:tabSelectedTextColor="@android:color/tertiary_text_dark"
                app:tabIndicator="@drawable/radio_recipe_pressed"
                app:tabIndicatorFullWidth="false"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                app:layout_scrollFlags="scroll|enterAlways"
                android:id="@+id/tab_layout"
                app:tabMode="scrollable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <com.google.android.material.tabs.TabItem
                    android:text="@string/all_recipes_string_res"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <com.google.android.material.tabs.TabItem
                    android:text="@string/favorite_string_res"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <com.google.android.material.tabs.TabItem
                    android:text="@string/vegetarian_string_res"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>