<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workout.WorkoutActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:fitsSystemWindows="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:background="@color/basicActivityGrey"
            app:collapsedTitleGravity="start"
            app:titleEnabled="true"
            app:title="@string/title_activity_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/exercises"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.Toolbar>
            <View
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/grey_A6A6A6"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_gravity="center"
        android:text="@string/no_notification"
        android:id="@+id/no_notification_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/plus"
        android:layout_margin="16dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>